# PharmaCopy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/src/: api.py  crawler.py  db.py  generate_response.py  main.py  output.jsonl  seen_domains.txt  seen_urls.txt  urls.txt
