[project]
name = "pharmacopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "bitsandbytes>=0.49.2",
    "chromadb>=1.5.5",
    "google-labs-html-chunker>=0.0.5",
    "huggingface-hub[cli]>=1.9.0",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "transformers>=5.5.0",
]
