[project]
name = "pharmacopy"
version = "0.1.0"
description = "Crawl FDA guidelines, index passages into vector DB, and evaluate pharmaceutical marketing copy for compliance using RAG + LLM"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "bitsandbytes>=0.49.2",
    "chromadb>=1.5.5",
    "fastapi>=0.120.0",
    "google-labs-html-chunker>=0.0.5",
    "huggingface-hub[cli]>=1.9.0",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "uvicorn[standard]>=0.23.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "crawler", "db", "generate_response", "api"]
package-dir = { "" = "app/src" }
